--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,9 +5,69 @@
 </ion-header>
 
 <ion-content padding>
-  <h2>Welcome to IonicFirstApp</h2>
-  <p>
-    Hello World!!!
-  </p>
+  <h2>Button</h2>
+  <button ion-button>Button</button>
+  <button ion-button>Button</button>
+  <button ion-button color="light">Light</button>
+  <button ion-button color="secondary">Secondary</button>
+  <button ion-button color="danger">Danger</button>
+  <button ion-button color="dark">Dark</button>
+  <button ion-button color="pink">Pink</button>
+
+   <h2>Clear Button</h2>
+  <button ion-button color="light" clear>Light</button>
+  <button ion-button color="secondary" clear>Secondary</button>
+  <button ion-button color="danger" clear>Danger</button>
+  <button ion-button color="dark" clear>Dark</button>
+  <button ion-button color="pink" clear>Pink</button>
+
+  <h2>Round Button</h2>
+  <button ion-button color="pink" round>Pink</button>
+
+  <h2>Outline Button</h2>
+  <button ion-button color="pink" outline>Pink</button>
+
+  <h2>Full Button</h2>
+  <button ion-button color="pink" full>Pink</button>
+
+  <h2>Button Size</h2>
+  <button ion-button color="dark" small>Dark</button>
+  <button ion-button color="pink" >Pink</button>
+  <button ion-button color="dark" large>Dark</button>
+   
+  <h2>Icon Button</h2>
+  <button ion-button>
+    <ion-icon name="ice-cream" icon-left></ion-icon>
+    Home
+  </button>
+  <button ion-button icon-only>
+      <ion-icon name="add" icon-left></ion-icon>
+    </button>
+  
+  <h2>Badges</h2>
+    <ion-item>
+      <ion-icon name='medal'></ion-icon>
+      Peter Paeker
+      <ion-badge color="danger" >900,000</ion-badge>
+    </ion-item>
+    <ion-item>
+        <ion-icon name='medal'></ion-icon>
+        Clark Kent
+        <ion-badge color="danger" >910,000</ion-badge>
+      </ion-item>
+    <ion-item>
+          <ion-icon name='medal'></ion-icon>
+          Parina S.
+          <ion-badge color="danger" >1,000,000</ion-badge>
+        </ion-item>
+  
+
+  
+  
+  
+
+
+
+  
   
 </ion-content>
